# Sentinel

./: .gitignore  README.md  neo4j_config.json  pyproject.toml  user_profile.json
context_files/session_20251213_160316_725592/: context_summary_20251213_160407.md
context_files/session_20251214_002105_431606/: context_summary_20251214_002311.md
context_files/session_20251214_003948_740669/: context_summary_20251214_004020.md  context_summary_20251214_004354.md
sentinel/: commands.py  config.py  conflicts.py  curator.py  enricher.py  extract.py  kg_qa.py  kg_store.py  llm.py  main.py  utils.py
sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
